nginx-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  labels:
    run: nginx-web
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    run: nginx-web
